# BonsaiVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: code.hpp  object.hpp
src/: code.cpp  object.cpp  vm.cpp  vm.hpp
tests/: vm_test.cpp
